Updated topic naming.  It hates slashes.  Added a tf2 message

--- a/repub_configs/ark_server_republishers.cfg
+++ b/repub_configs/ark_server_republishers.cfg
@@ -9,30 +9,29 @@
 #   topic_name, msg_package, msg_type, direction
 
 ################ USER TO ARK ####################
-/tf, ark, tfMessage, lcm2ros
-/tf_static, ark, TFMessage, lcm2ros
-/platform_control/cmd_vel, ark, Twist, lcm2ros
-/platform_control/odom, ark, Odometry, lcm2ros
-/platform_odometry, ark, Odometry, lcm2ros
+tf, ark, tfMessage, lcm2ros
+tf_static, ark, tf2Message, lcm2ros
+platform_control_cmd_vel, ark, Twist, lcm2ros
+platform_control_odom, ark, Odometry, lcm2ros
+platform_odometry, ark, Odometry, lcm2ros
 
 ################ ARK TO USER ####################
-/strategy_manager/path_complete, ark, Bool, ros2lcm
-/strategy_manager/pause_status, ark, PauseStatus, ros2lcm
-/strategy_manager/simple_goal, ark, PoseStamped, ros2lcm
-/strategy_manager/simple_path, ark, Path, ros2lcm
-/strategy_manager/distance_to_goal, ark, DistanceToGoal, ros2lcm
-/slam/map, ark, OccupancyGrid, ros2lcm
-/slam/pose, ark, Odometry, ros2lcm
-/slam/localization_score, ark, Float64, ros2lcm
-/map_data/features/zones/exclusion, ark, GeometryArray, ros2lcm
-/map_data/features/markers/waypoint, ark, GeometryArray, ros2lcm
-/rear/scan, ark, LaserScan, ros2lcm
-/front/scan, ark, LaserScan, ros2lcm
-/map_data/saved_map_data, ark, CompressedMapData, ros2lcm
-/map_data/map, ark, OccupancyGrid, ros2lcm
-/map_data/md5sum, ark, String, ros2lcm
-/map_data/loaded_map_filename, ark, String, ros2lcm
-/e_stop, ark, Bool, ros2lcm
-/control_selection/control_state, ark, ControlSelectionState, ros2lcm
-/path, ark, PoseArray, ros2lcm
-/path_2d, ark, Pose2DArray, ros2lcm
+strategy_manager_path_complete, ark, Bool, ros2lcm
+strategy_manager_pause_status, ark, PauseStatus, ros2lcm
+strategy_manager_simple_goal, ark, PoseStamped, ros2lcm
+strategy_manager_simple_path, ark, Path, ros2lcm
+strategy_manager_distance_to_goal, ark, DistanceToGoal, ros2lcm
+slam_map, ark, OccupancyGrid, ros2lcm
+slam_pose, ark, Odometry, ros2lcm
+slam_localization_score, ark, Float64, ros2lcm
+map_data_features_zones_exclusion, ark, GeometryArray, ros2lcm
+map_data_features_markers_waypoint, ark, GeometryArray, ros2lcm
+rear_scan, ark, LaserScan, ros2lcm
+front_scan, ark, LaserScan, ros2lcm
+map_data_saved_map_data, ark, CompressedMapData, ros2lcm
+map_data_map, ark, OccupancyGrid, ros2lcm
+map_data_md5sum, ark, String, ros2lcm
+map_data_loaded_map_filename, ark, String, ros2lcm
+e_stop, ark, Bool, ros2lcm
+control_selection_control_state, ark, ControlSelectionState, ros2lcm
+path, ark, PoseArray, ros2lcm
