--- a/repub_configs/ark_client_republishers.cfg
+++ b/repub_configs/ark_client_republishers.cfg
@@ -9,30 +9,29 @@
 #   topic_name, msg_package, msg_type, direction
 
 ################ USER TO ARK ####################
-/tf, ark, tfMessage, ros2lcm
-/tf_static, ark, TFMessage, ros2lcm
-/platform_control/cmd_vel, ark, Twist, ros2lcm
-/platform_control/odom, ark, Odometry, ros2lcm
-/platform_odometry, ark, Odometry, ros2lcm
+tf, ark, tfMessage, ros2lcm
+tf_static, ark, tf2Message, ros2lcm
+platform_control_cmd_vel, ark, Twist, ros2lcm
+platform_control_odom, ark, Odometry, ros2lcm
+platform_odometry, ark, Odometry, ros2lcm
 
 ################ ARK TO USER ####################
-/strategy_manager/path_complete, ark, Bool, lcm2ros
-/strategy_manager/pause_status, ark, PauseStatus, lcm2ros
-/strategy_manager/simple_goal, ark, PoseStamped, lcm2ros
-/strategy_manager/simple_path, ark, Path, lcm2ros
-/strategy_manager/distance_to_goal, ark, DistanceToGoal, lcm2ros
-/slam/map, ark, OccupancyGrid, lcm2ros
-/slam/pose, ark, Odometry, lcm2ros
-/slam/localization_score, ark, Float64, lcm2ros
-/map_data/features/zones/exclusion, ark, GeometryArray, lcm2ros
-/map_data/features/markers/waypoint, ark, GeometryArray, lcm2ros
-/rear/scan, ark, LaserScan, lcm2ros
-/front/scan, ark, LaserScan, lcm2ros
-/map_data/saved_map_data, ark, CompressedMapData, lcm2ros
-/map_data/map, ark, OccupancyGrid, lcm2ros
-/map_data/md5sum, ark, String, lcm2ros
-/map_data/loaded_map_filename, ark, String, lcm2ros
-/e_stop, ark, Bool, lcm2ros
-/control_selection/control_state, ark, ControlSelectionState, lcm2ros
-/path, ark, PoseArray, lcm2ros
-/path_2d, ark, Pose2DArray, lcm2ros
+strategy_manager_path_complete, ark, Bool, lcm2ros
+strategy_manager_pause_status, ark, PauseStatus, lcm2ros
+strategy_manager_simple_goal, ark, PoseStamped, lcm2ros
+strategy_manager_simple_path, ark, Path, lcm2ros
+strategy_manager_distance_to_goal, ark, DistanceToGoal, lcm2ros
+slam_map, ark, OccupancyGrid, lcm2ros
+slam_pose, ark, Odometry, lcm2ros
+slam_localization_score, ark, Float64, lcm2ros
+map_data_features_zones_exclusion, ark, GeometryArray, lcm2ros
+map_data_features_markers_waypoint, ark, GeometryArray, lcm2ros
+rear_scan, ark, LaserScan, lcm2ros
+front_scan, ark, LaserScan, lcm2ros
+map_data_saved_map_data, ark, CompressedMapData, lcm2ros
+map_data_map, ark, OccupancyGrid, lcm2ros
+map_data_md5sum, ark, String, lcm2ros
+map_data_loaded_map_filename, ark, String, lcm2ros
+e_stop, ark, Bool, lcm2ros
+control_selection_control_state, ark, ControlSelectionState, lcm2ros
+path, ark, PoseArray, lcm2ros
