Updated the bridges so they actually worked properly.  Updated the config files so the directions were correct.  Added some launch files that will start the shim nodes and launch the bridge

--- a/repub_configs/ark_client_republishers.cfg
+++ b/repub_configs/ark_client_republishers.cfg
@@ -11,7 +11,7 @@
 ################ USER TO ARK ####################
 tf, ark, tfMessage, ros2lcm
 tf_static, ark, tf2Message, ros2lcm
-platform_control_cmd_vel, ark, Twist, ros2lcm
+platform_control_cmd_vel, ark, Twist, lcm2ros
 platform_control_odom, ark, Odometry, ros2lcm
 platform_odometry, ark, Odometry, ros2lcm
 
