--- a/repub_configs/ark_server_republishers.cfg
+++ b/repub_configs/ark_server_republishers.cfg
@@ -11,7 +11,7 @@
 ################ USER TO ARK ####################
 tf, ark, tfMessage, lcm2ros
 tf_static, ark, tf2Message, lcm2ros
-platform_control_cmd_vel, ark, Twist, lcm2ros
+platform_control_cmd_vel, ark, Twist, ros2lcm
 platform_control_odom, ark, Odometry, lcm2ros
 platform_odometry, ark, Odometry, lcm2ros
 
