Updated the repub configs to not include some unnecessary topics, adding move_base status topic and all necessary messages.  Still need to create shim

--- a/repub_configs/ark_client_republishers.cfg
+++ b/repub_configs/ark_client_republishers.cfg
@@ -1,17 +1,33 @@
-# --- Config file for generating ROS/LCM republishers ---
-# This file is intended to be used with the rosrepub-gen
-# script, which will (for each non-comment line of this
-# file) attempt to generate C++ republisher code that
-# republishes messages of a specified to to/from a ROS
-# topic from/to an LCM topic.
-#   Each (non-comment) line of the file should contain four
-#   comma-separated fields:
-#   topic_name, msg_package, msg_type, direction
-
-################ USER TO ARK ####################
+################ NECESSARY FOR ARK ####################
 tf, ark, tfMessage, ros2lcm
 tf_static, ark, tf2Message, ros2lcm
 platform_control_cmd_vel, ark, Twist, lcm2ros
 platform_control_odom, ark, Odometry, ros2lcm
 platform_odometry, ark, Odometry, ros2lcm
 
+################ ARK API ####################
+strategy_manager_path_complete, ark, Bool, lcm2ros
+strategy_manager_pause_status, ark, PauseStatus, lcm2ros
+strategy_manager_simple_goal, ark, PoseStamped, lcm2ros
+strategy_manager_simple_path, ark, Path, lcm2ros
+strategy_manager_distance_to_goal, ark, DistanceToGoal, lcm2ros
+slam_localization_score, ark, Float64, lcm2ros
+map_data_features_zones_exclusion, ark, GeometryArray, lcm2ros
+map_data_features_markers_waypoint, ark, GeometryArray, lcm2ros
+
+#### LASERS ON ARK ####
+#rear_scan, ark, LaserScan, lcm2ros
+#front_scan, ark, LaserScan, lcm2ros
+#### LASERS ON ROBOT ####
+rear_scan, ark, LaserScan, ros2lcm
+front_scan, ark, LaserScan, ros2lcm
+#######################
+
+map_data_saved_map_data, ark, CompressedMapData, lcm2ros
+map_data_map, ark, OccupancyGrid, lcm2ros
+map_data_md5sum, ark, String, lcm2ros
+map_data_loaded_map_filename, ark, String, lcm2ros
+e_stop, ark, Bool, lcm2ros
+control_selection_control_state, ark, ControlSelectionState, lcm2ros
+path, ark, PoseArray, lcm2ros
+move_base_status, ark, GoalStatusArray, lcm2ros
