--- a/repub_configs/ark_server_republishers.cfg
+++ b/repub_configs/ark_server_republishers.cfg
@@ -1,33 +1,28 @@
-# --- Config file for generating ROS/LCM republishers ---
-# This file is intended to be used with the rosrepub-gen
-# script, which will (for each non-comment line of this
-# file) attempt to generate C++ republisher code that
-# republishes messages of a specified to to/from a ROS
-# topic from/to an LCM topic.
-#   Each (non-comment) line of the file should contain four
-#   comma-separated fields:
-#   topic_name, msg_package, msg_type, direction
-
-################ USER TO ARK ####################
+################ NECESSARY FOR ARK ####################
 tf, ark, tfMessage, lcm2ros
 tf_static, ark, tf2Message, lcm2ros
 platform_control_cmd_vel, ark, Twist, ros2lcm
 platform_control_odom, ark, Odometry, lcm2ros
 platform_odometry, ark, Odometry, lcm2ros
 
-################ ARK TO USER ####################
+################ ARK API ####################
 strategy_manager_path_complete, ark, Bool, ros2lcm
 strategy_manager_pause_status, ark, PauseStatus, ros2lcm
 strategy_manager_simple_goal, ark, PoseStamped, ros2lcm
 strategy_manager_simple_path, ark, Path, ros2lcm
 strategy_manager_distance_to_goal, ark, DistanceToGoal, ros2lcm
-slam_map, ark, OccupancyGrid, ros2lcm
-slam_pose, ark, Odometry, ros2lcm
 slam_localization_score, ark, Float64, ros2lcm
 map_data_features_zones_exclusion, ark, GeometryArray, ros2lcm
 map_data_features_markers_waypoint, ark, GeometryArray, ros2lcm
-rear_scan, ark, LaserScan, ros2lcm
-front_scan, ark, LaserScan, ros2lcm
+
+#### LASERS ON ARK ####
+#rear_scan, ark, LaserScan, ros2lcm
+#front_scan, ark, LaserScan, ros2lcm
+#### LASERS ON ROBOT ####
+rear_scan, ark, LaserScan, lcm2ros
+front_scan, ark, LaserScan, lcm2ros
+#######################
+
 map_data_saved_map_data, ark, CompressedMapData, ros2lcm
 map_data_map, ark, OccupancyGrid, ros2lcm
 map_data_md5sum, ark, String, ros2lcm
@@ -35,3 +30,4 @@ map_data_loaded_map_filename, ark, String, ros2lcm
 e_stop, ark, Bool, ros2lcm
 control_selection_control_state, ark, ControlSelectionState, ros2lcm
 path, ark, PoseArray, ros2lcm
+move_base_status, ark, GoalStatusArray, ros2lcm
