Added posewithcovariancestamped for the estimated_pose topic

--- a/repub_configs/ark_client_republishers.cfg
+++ b/repub_configs/ark_client_republishers.cfg
@@ -31,3 +31,4 @@ e_stop, ark, Bool, lcm2ros
 control_selection_control_state, ark, ControlSelectionState, lcm2ros
 path, ark, PoseArray, lcm2ros
 move_base_status, ark, GoalStatusArray, lcm2ros
+slam_estimated_pose, ark, PoseWithCovarianceStamped, lcm2ros
