--- a/repub_configs/ark_server_republishers.cfg
+++ b/repub_configs/ark_server_republishers.cfg
@@ -31,3 +31,5 @@ e_stop, ark, Bool, ros2lcm
 control_selection_control_state, ark, ControlSelectionState, ros2lcm
 path, ark, PoseArray, ros2lcm
 move_base_status, ark, GoalStatusArray, ros2lcm
+slam_estimated_pose, ark, PoseWithCovarianceStamped, ros2lcm
+
