--- a/repub_configs/ark_server_republishers.cfg
+++ b/repub_configs/ark_server_republishers.cfg
@@ -14,15 +14,6 @@ strategy_manager_distance_to_goal, ark, DistanceToGoal, ros2lcm
 slam_localization_score, ark, Float64, ros2lcm
 map_data_features_zones_exclusion, ark, GeometryArray, ros2lcm
 map_data_features_markers_waypoint, ark, GeometryArray, ros2lcm
-
-#### LASERS ON ARK ####
-#rear_scan, ark, LaserScan, ros2lcm
-#front_scan, ark, LaserScan, ros2lcm
-#### LASERS ON ROBOT ####
-rear_scan, ark, LaserScan, lcm2ros
-front_scan, ark, LaserScan, lcm2ros
-#######################
-
 map_data_saved_map_data, ark, CompressedMapData, ros2lcm
 map_data_map, ark, OccupancyGrid, ros2lcm
 map_data_md5sum, ark, String, ros2lcm
@@ -32,4 +23,66 @@ control_selection_control_state, ark, ControlSelectionState, ros2lcm
 path, ark, PoseArray, ros2lcm
 move_base_status, ark, GoalStatusArray, ros2lcm
 slam_estimated_pose, ark, PoseWithCovarianceStamped, ros2lcm
+
+#### LASERS ON ARK ####
+#rear_scan, ark, LaserScan, ros2lcm
+#front_scan, ark, LaserScan, ros2lcm
+#### LASERS ON ROBOT ####
+rear_scan, ark, LaserScan, lcm2ros
+front_scan, ark, LaserScan, lcm2ros
+#######################
+
+### Service Calls ###
+control_selection_autonomy_clear_all_disabled_call, ark, Empty, lcm2ros
+control_selection_autonomy_clear_all_paused_call, ark, Empty, lcm2ros
+control_selection_autonomy_disable_call, ark, String, lcm2ros
+control_selection_autonomy_enable_call, ark, String, lcm2ros
+control_selection_autonomy_pause_call, ark, String, lcm2ros
+control_selection_autonomy_resume_call, ark, String, lcm2ros
+control_selection_core_clear_all_disabled_call, ark, Empty, lcm2ros
+control_selection_core_clear_all_paused_call, ark, Empty, lcm2ros
+control_selection_core_disable_call, ark, String, lcm2ros
+control_selection_core_enable_call, ark, String, lcm2ros
+control_selection_core_pause_call, ark, String, lcm2ros
+control_selection_core_resume_call, ark, String, lcm2ros
+control_selection_set_mode_call, ark, Mode, lcm2ros
+map_data_clear_call, ark, Empty, lcm2ros
+map_data_delete_map_call, ark, String, lcm2ros
+map_data_get_current_map_call, ark, Empty, lcm2ros
+map_data_get_map_info_call, ark, String, lcm2ros
+map_data_list_maps_call, ark, Empty, lcm2ros
+map_data_load_map_from_disk_call, ark, String, lcm2ros
+map_data_save_map_to_disk_call, ark, SaveMapToDiskCall, lcm2ros
+mode_manager_set_mode_call, ark, Mode, lcm2ros
+slam_set_initial_pose_call, ark, , lcm2ros
+strategy_manager_abort_path_call, ark, Empty, lcm2ros
+strategy_manager_pause_call, ark, PauseControlCall, lcm2ros
+strategy_manager_resume_call, ark, PauseControlCall, lcm2ros
+
+### Service Responses ##
+control_selection_autonomy_clear_all_disabled_response, ark, Empty, ros2lcm
+control_selection_autonomy_clear_all_paused_response, ark, Empty, ros2lcm
+control_selection_autonomy_disable_response, ark, Empty, ros2lcm
+control_selection_autonomy_enable_response, ark, Empty, ros2lcm
+control_selection_autonomy_pause_response, ark, Empty, ros2lcm
+control_selection_autonomy_resume_response, ark, Empty, ros2lcm
+control_selection_core_clear_all_disabled_response, ark, Empty, ros2lcm
+control_selection_core_clear_all_paused_response, ark, Empty, ros2lcm
+control_selection_core_disable_response, ark, Empty, ros2lcm
+control_selection_core_enable_response, ark, Empty, ros2lcm
+control_selection_core_pause_response, ark, Empty, ros2lcm
+control_selection_core_resume_response, ark, Empty, ros2lcm
+control_selection_set_mode_response, ark, Empty, ros2lcm
+map_data_clear_response, ark, Empty, ros2lcm
+map_data_delete_map_response, ark, Empty, ros2lcm
+map_data_get_current_map_response, ark, GetCurrentMapResponse, ros2lcm
+map_data_get_map_info_response, ark, MapInfoResponse, ros2lcm
+map_data_list_maps_response, ark, StringArray, ros2lcm
+map_data_load_map_from_disk_response, ark, Empty, ros2lcm
+map_data_save_map_to_disk_response, ark, Empty, ros2lcm
+mode_manager_set_mode_response, ark, Status, ros2lcm
+slam_set_initial_pose_response, ark, , ros2lcm
+strategy_manager_abort_path_response, ark, Empty, ros2lcm
+strategy_manager_pause_response, ark, PauseControlResponse, ros2lcm
+strategy_manager_resume_response, ark, PauseControlResponse, ros2lcm
 
