--- a/repub_configs/ark_client_republishers.cfg
+++ b/repub_configs/ark_client_republishers.cfg
@@ -54,10 +54,11 @@ map_data_list_maps_call, ark, Empty, ros2lcm
 map_data_load_map_from_disk_call, ark, String, ros2lcm
 map_data_save_map_to_disk_call, ark, SaveMapToDiskCall, ros2lcm
 mode_manager_set_mode_call, ark, Mode, ros2lcm
-slam_set_initial_pose_call, ark, , ros2lcm
+#### slam_set_initial_pose_call, ark, , ros2lcm
 strategy_manager_abort_path_call, ark, Empty, ros2lcm
 strategy_manager_pause_call, ark, PauseControlCall, ros2lcm
 strategy_manager_resume_call, ark, PauseControlCall, ros2lcm
+ark_config_settings_call, ark, ArkConfigSettingsCall, ros2lcm
 
 ### Service Responses ##
 control_selection_autonomy_clear_all_disabled_response, ark, Empty, lcm2ros
@@ -81,8 +82,8 @@ map_data_list_maps_response, ark, StringArray, lcm2ros
 map_data_load_map_from_disk_response, ark, Empty, lcm2ros
 map_data_save_map_to_disk_response, ark, Empty, lcm2ros
 mode_manager_set_mode_response, ark, Status, lcm2ros
-slam_set_initial_pose_response, ark, , lcm2ros
+#### slam_set_initial_pose_response, ark, , lcm2ros
 strategy_manager_abort_path_response, ark, Empty, lcm2ros
 strategy_manager_pause_response, ark, PauseControlResponse, lcm2ros
 strategy_manager_resume_response, ark, PauseControlResponse, lcm2ros
-
+ark_config_settings_response, ark, ArkConfigSettingsResponse, lcm2ros
