--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -319,3 +319,14 @@ add_dependencies(arkconfigsettings_service
     ${${PROJECT_NAME}_EXPORTED_TARGETS}
     ${catkin_EXPORTED_TARGETS}
 )
+
+###########################################################################
+add_executable(setpose_service setpose_service.cpp)
+target_link_libraries( setpose_service
+    ${LCM_LIBRARY}
+    ${catkin_LIBRARIES}
+)
+add_dependencies(setpose_service
+    ${${PROJECT_NAME}_EXPORTED_TARGETS}
+    ${catkin_EXPORTED_TARGETS}
+)
