--- a/repub_configs/ark_server_republishers.cfg
+++ b/repub_configs/ark_server_republishers.cfg
@@ -54,7 +54,7 @@ map_data_list_maps_call, ark, Empty, lcm2ros
 map_data_load_map_from_disk_call, ark, String, lcm2ros
 map_data_save_map_to_disk_call, ark, SaveMapToDiskCall, lcm2ros
 mode_manager_set_mode_call, ark, Mode, lcm2ros
-#### slam_set_initial_pose_call, ark, , lcm2ros
+slam_set_initial_pose_call, ark, slam_set_initial_pose_call, lcm2ros
 strategy_manager_abort_path_call, ark, Empty, lcm2ros
 strategy_manager_pause_call, ark, PauseControlCall, lcm2ros
 strategy_manager_resume_call, ark, PauseControlCall, lcm2ros
@@ -82,7 +82,7 @@ map_data_list_maps_response, ark, StringArray, ros2lcm
 map_data_load_map_from_disk_response, ark, Empty, ros2lcm
 map_data_save_map_to_disk_response, ark, Empty, ros2lcm
 mode_manager_set_mode_response, ark, Status, ros2lcm
-#### slam_set_initial_pose_response, ark, , ros2lcm
+slam_set_initial_pose_response, ark, slam_set_initial_pose_response, ros2lcm
 strategy_manager_abort_path_response, ark, Empty, ros2lcm
 strategy_manager_pause_response, ark, PauseControlResponse, ros2lcm
 strategy_manager_resume_response, ark, PauseControlResponse, ros2lcm
