--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -330,3 +330,14 @@ add_dependencies(setpose_service
     ${${PROJECT_NAME}_EXPORTED_TARGETS}
     ${catkin_EXPORTED_TARGETS}
 )
+
+###########################################################################
+add_executable(getcurrentmap_service getcurrentmap_service.cpp)
+target_link_libraries( getcurrentmap_service
+    ${LCM_LIBRARY}
+    ${catkin_LIBRARIES}
+)
+add_dependencies(getcurrentmap_service
+    ${${PROJECT_NAME}_EXPORTED_TARGETS}
+    ${catkin_EXPORTED_TARGETS}
+)
