changed the direction of the simple goal bridge and added an example for sending a goal, making sure the goal is accepted, then waiting until the goal is completed

--- a/repub_configs/ark_client_republishers.cfg
+++ b/repub_configs/ark_client_republishers.cfg
@@ -8,7 +8,7 @@ platform_odometry, ark, Odometry, ros2lcm
 ################ ARK API ####################
 strategy_manager_path_complete, ark, Bool, lcm2ros
 strategy_manager_pause_status, ark, PauseStatus, lcm2ros
-strategy_manager_simple_goal, ark, PoseStamped, lcm2ros
+strategy_manager_simple_goal, ark, PoseStamped, ros2lcm
 strategy_manager_simple_path, ark, Path, lcm2ros
 strategy_manager_distance_to_goal, ark, DistanceToGoal, lcm2ros
 slam_localization_score, ark, Float64, lcm2ros
