--- a/repub_configs/ark_server_republishers.cfg
+++ b/repub_configs/ark_server_republishers.cfg
@@ -8,7 +8,7 @@ platform_odometry, ark, Odometry, lcm2ros
 ################ ARK API ####################
 strategy_manager_path_complete, ark, Bool, ros2lcm
 strategy_manager_pause_status, ark, PauseStatus, ros2lcm
-strategy_manager_simple_goal, ark, PoseStamped, ros2lcm
+strategy_manager_simple_goal, ark, PoseStamped, lcm2ros
 strategy_manager_simple_path, ark, Path, ros2lcm
 strategy_manager_distance_to_goal, ark, DistanceToGoal, ros2lcm
 slam_localization_score, ark, Float64, ros2lcm
