Added a clock lcm bridge and a clock republisher (for simulation)

--- a/repub_configs/ark_client_republishers.cfg
+++ b/repub_configs/ark_client_republishers.cfg
@@ -4,6 +4,7 @@ tf_static, ark, tf2Message, ros2lcm
 platform_control_cmd_vel, ark, Twist, lcm2ros
 platform_control_odom, ark, Odometry, ros2lcm
 platform_odometry, ark, Odometry, ros2lcm
+clock, ark, Clock, ros2lcm
 
 ################ ARK API ####################
 strategy_manager_path_complete, ark, Bool, lcm2ros
