Added a clock publisher node for when a real robot is used.  Added a bridge for the clock echo and a throttle to throttle the clock back as an echo

--- a/repub_configs/ark_server_republishers.cfg
+++ b/repub_configs/ark_server_republishers.cfg
@@ -24,6 +24,7 @@ control_selection_control_state, ark, ControlSelectionState, ros2lcm
 path, ark, PoseArray, ros2lcm
 move_base_status, ark, GoalStatusArray, ros2lcm
 slam_estimated_pose, ark, PoseWithCovarianceStamped, ros2lcm
+clock_echo, ark, Clock, ros2lcm
 
 #### LASERS ON ARK ####
 #rear_scan, ark, LaserScan, ros2lcm
