--- a/repub_configs/ark_client_republishers.cfg
+++ b/repub_configs/ark_client_republishers.cfg
@@ -24,6 +24,7 @@ control_selection_control_state, ark, ControlSelectionState, lcm2ros
 path, ark, PoseArray, lcm2ros
 move_base_status, ark, GoalStatusArray, lcm2ros
 slam_estimated_pose, ark, PoseWithCovarianceStamped, lcm2ros
+clock_echo, ark, Clock, lcm2ros
 
 #### LASERS ON ARK ####
 #rear_scan, ark, LaserScan, lcm2ros
