Added diagnostics for ark

--- a/repub_configs/ark_server_republishers.cfg
+++ b/repub_configs/ark_server_republishers.cfg
@@ -1,3 +1,7 @@
+
+# REFERENCE:
+# topic_name, lcm_message_package (always ark), message_type, direction (lcm2ros or ros2lcm)
+
 ################ NECESSARY FOR ARK ####################
 tf, ark, tfMessage, lcm2ros
 tf_static, ark, tf2Message, lcm2ros
@@ -25,6 +29,9 @@ path, ark, PoseArray, ros2lcm
 move_base_status, ark, GoalStatusArray, ros2lcm
 slam_estimated_pose, ark, PoseWithCovarianceStamped, ros2lcm
 clock_echo, ark, Clock, ros2lcm
+
+################## FOR DIAGNOSTICS ###################
+ark_diagnostics, ark, String, ros2lcm
 
 #### LASERS ON ARK ####
 #rear_scan, ark, LaserScan, ros2lcm
