--- a/repub_configs/ark_client_republishers.cfg
+++ b/repub_configs/ark_client_republishers.cfg
@@ -27,6 +27,10 @@ slam_estimated_pose, ark, PoseWithCovarianceStamped, lcm2ros
 clock_echo, ark, Clock, lcm2ros
 
 
+###### FOR RECEIVING DIAGNOSTICS ON CLIENT ##########
+ark_diagnostics, ark, String, lcm2ros
+
+
 #### LASERS ON ARK ####
 #rear_scan, ark, LaserScan, lcm2ros
 #front_scan, ark, LaserScan, lcm2ros
