Added a shim, and message, for pointcloud2 messages

--- a/repub_configs/ark_client_republishers.cfg
+++ b/repub_configs/ark_client_republishers.cfg
@@ -5,6 +5,7 @@ platform_control_cmd_vel, ark, Twist, lcm2ros
 platform_control_odom, ark, Odometry, ros2lcm
 platform_odometry, ark, Odometry, ros2lcm
 clock, ark, Clock, ros2lcm
+stereo_camera_0, ark, PointCloud2, ros2lcm
 
 ################ ARK API ####################
 strategy_manager_path_complete, ark, Bool, lcm2ros
@@ -25,7 +26,6 @@ path, ark, PoseArray, lcm2ros
 move_base_status, ark, GoalStatusArray, lcm2ros
 slam_estimated_pose, ark, PoseWithCovarianceStamped, lcm2ros
 clock_echo, ark, Clock, lcm2ros
-
 
 ###### FOR RECEIVING DIAGNOSTICS ON CLIENT ##########
 ark_diagnostics, ark, String, lcm2ros
