--- a/repub_configs/ark_server_republishers.cfg
+++ b/repub_configs/ark_server_republishers.cfg
@@ -8,6 +8,7 @@ tf_static, ark, tf2Message, lcm2ros
 platform_control_cmd_vel, ark, Twist, ros2lcm
 platform_control_odom, ark, Odometry, lcm2ros
 platform_odometry, ark, Odometry, lcm2ros
+stereo_camera_0, ark, PointCloud2, lcm2ros
 clock, ark, Clock, lcm2ros
 
 ################ ARK API ####################
