Added Diagnostics Array, KeyValue, Diagnostic Status, and all shims and lcm republishers to make it work

--- a/repub_configs/ark_client_republishers.cfg
+++ b/repub_configs/ark_client_republishers.cfg
@@ -28,8 +28,7 @@ slam_estimated_pose, ark, PoseWithCovarianceStamped, lcm2ros
 clock_echo, ark, Clock, lcm2ros
 
 ###### FOR RECEIVING DIAGNOSTICS ON CLIENT ##########
-ark_diagnostics, ark, String, lcm2ros
-
+ark_diagnostics, ark, DiagnosticArray, lcm2ros
 
 #### LASERS ON ARK ####
 #rear_scan, ark, LaserScan, lcm2ros
