--- a/repub_configs/ark_server_republishers.cfg
+++ b/repub_configs/ark_server_republishers.cfg
@@ -32,7 +32,7 @@ slam_estimated_pose, ark, PoseWithCovarianceStamped, ros2lcm
 clock_echo, ark, Clock, ros2lcm
 
 ################## FOR DIAGNOSTICS ###################
-ark_diagnostics, ark, String, ros2lcm
+ark_diagnostics, ark, DiagnosticArray, ros2lcm
 
 #### LASERS ON ARK ####
 #rear_scan, ark, LaserScan, ros2lcm
