Added a new bridge to the autonomy status of the ark

--- a/repub_configs/ark_client_republishers.cfg
+++ b/repub_configs/ark_client_republishers.cfg
@@ -20,6 +20,7 @@ map_data_saved_map_data, ark, CompressedMapData, lcm2ros
 map_data_map, ark, OccupancyGrid, lcm2ros
 map_data_md5sum, ark, String, lcm2ros
 map_data_loaded_map_filename, ark, String, lcm2ros
+control_selection_current_mode, ark, Mode, lcm2ros
 e_stop, ark, Bool, lcm2ros
 control_selection_control_state, ark, ControlSelectionState, lcm2ros
 path, ark, PoseArray, lcm2ros
