--- a/repub_configs/ark_server_republishers.cfg
+++ b/repub_configs/ark_server_republishers.cfg
@@ -24,6 +24,7 @@ map_data_saved_map_data, ark, CompressedMapData, ros2lcm
 map_data_map, ark, OccupancyGrid, ros2lcm
 map_data_md5sum, ark, String, ros2lcm
 map_data_loaded_map_filename, ark, String, ros2lcm
+control_selection_current_mode, ark, Mode, ros2lcm
 e_stop, ark, Bool, ros2lcm
 control_selection_control_state, ark, ControlSelectionState, ros2lcm
 path, ark, PoseArray, ros2lcm
