Made all ros messages coming out of LCM latching so it is easier to check the current state without needing a state change.  Also added camera memory time to the ark configuration for those using a 3d camera

--- a/src/lcm2ros_default_republisher.cpp.in
+++ b/src/lcm2ros_default_republisher.cpp.in
@@ -26,7 +26,7 @@ LCMToROSRepublisher::LCMToROSRepublisher(ros::NodeHandle& n)
     nh = n;
    
     // Publisher/s
-    ros_pub = nh.advertise<ark_bridge::@MESSAGE_TYPE@>("@TOPIC_NAME@", 10);
+    ros_pub = nh.advertise<ark_bridge::@MESSAGE_TYPE@>("@TOPIC_NAME@", 10, true);
     ROS_DEBUG("@TOPIC_NAME@ publisher created");
 };
 
