Updated repub configs for new interface

--- a/repub_configs/ark_client_republishers.cfg
+++ b/repub_configs/ark_client_republishers.cfg
@@ -7,26 +7,33 @@ platform_odometry, ark, Odometry, ros2lcm
 clock, ark, Clock, ros2lcm
 stereo_camera_0, ark, PointCloud2, ros2lcm
 
-################ ARK API ####################
-strategy_manager_path_complete, ark, Bool, lcm2ros
-strategy_manager_pause_status, ark, PauseStatus, lcm2ros
-strategy_manager_simple_goal, ark, PoseStamped, ros2lcm
-strategy_manager_simple_path, ark, Path, lcm2ros
-strategy_manager_distance_to_goal, ark, DistanceToGoal, lcm2ros
-slam_localization_score, ark, Float64, lcm2ros
-map_data_features_zones_exclusion, ark, GeometryArray, lcm2ros
+################ ARK SUBSCRIBED ####################
+cancel_goal, ark, Empty, ros2lcm
+send_goal, ark, String, ros2lcm
+
+################ ARK PUBLISHED ####################
+platform_control_cmd_vel, ark, Twist, lcm2ros
 map_data_features_markers_waypoint, ark, GeometryArray, lcm2ros
-map_data_saved_map_data, ark, CompressedMapData, lcm2ros
-map_data_map, ark, OccupancyGrid, lcm2ros
-map_data_md5sum, ark, String, lcm2ros
-map_data_loaded_map_filename, ark, String, lcm2ros
+map_data_features_zones_exclusion, ark, GeometryArray, lcm2ros
 control_selection_current_mode, ark, Mode, lcm2ros
-e_stop, ark, Bool, lcm2ros
-control_selection_control_state, ark, ControlSelectionState, lcm2ros
-path, ark, PoseArray, lcm2ros
-move_base_status, ark, GoalStatusArray, lcm2ros
+slam_current_mode, ark, Mode, lcm2ros
+slam_localization_status, ark, LocalizationStatus, lcm2ros
 slam_estimated_pose, ark, PoseWithCovarianceStamped, lcm2ros
-clock_echo, ark, Clock, lcm2ros
+path_2d, ark, Pose2DArray, lcm2ros
+path_planner_status, ark, GoalStatusArray, lcm2ros
+path_planner_feedback, ark, StepSequenceActionFeedback, lcm2ros
+path_planner_result, ark, StepSequenceActionResult, lcm2ros
+path_planner_current_job, ark, String, lcm2ros
+path_planner_distance_to_goal, ark, DistanceToGoal, lcm2ros
+robot_state_aggregator_state, ark, RobotState, lcm2ros
+map_data_loaded_map_filename, ark, String, lcm2ros
+map_data_md5sum, ark, String, lcm2ros
+control_selection_current_mode, ark, Mode, lcm2ros
+control_selection_autonomy_disable_sources, ark, StringArray, lcm2ros
+control_selection_autonomy_pause_sources, ark, StringArray, lcm2ros
+control_selection_control_state, ark, ControlSelectionState, lcm2ros
+control_selection_core_disable_sources, ark, StringArray, lcm2ros
+control_selection_core_pause_sources, ark, StringArray, lcm2ros
 
 ###### FOR RECEIVING DIAGNOSTICS ON CLIENT ##########
 ark_diagnostics, ark, DiagnosticArray, lcm2ros
@@ -40,6 +47,10 @@ front_scan, ark, LaserScan, ros2lcm
 #######################
 
 ### Service Calls ###
+map_data_clear_call, ark, Empty, ros2lcm
+control_selection_set_mode_call, ark, Mode, ros2lcm
+slam_set_mode_call, ark, Mode, ros2lcm
+slam_set_initial_pose_call, ark, PoseWithCovarianceStamped, ros2lcm
 control_selection_autonomy_clear_all_disabled_call, ark, Empty, ros2lcm
 control_selection_autonomy_clear_all_paused_call, ark, Empty, ros2lcm
 control_selection_autonomy_disable_call, ark, String, ros2lcm
@@ -53,23 +64,16 @@ control_selection_core_enable_call, ark, String, ros2lcm
 control_selection_core_pause_call, ark, String, ros2lcm
 control_selection_core_resume_call, ark, String, ros2lcm
 control_selection_set_mode_call, ark, Mode, ros2lcm
-map_data_clear_call, ark, Empty, ros2lcm
 map_data_delete_map_call, ark, String, ros2lcm
-map_data_get_current_map_call, ark, Empty, ros2lcm
-map_data_get_map_info_call, ark, String, ros2lcm
 map_data_list_maps_call, ark, Empty, ros2lcm
 map_data_load_map_from_disk_call, ark, String, ros2lcm
-map_data_save_map_to_disk_call, ark, SaveMapToDiskCall, ros2lcm
-mode_manager_set_mode_call, ark, Mode, ros2lcm
-slam_set_initial_pose_call, ark, PoseWithCovarianceStamped, ros2lcm
-strategy_manager_abort_path_call, ark, Empty, ros2lcm
-strategy_manager_pause_call, ark, PauseControlCall, ros2lcm
-strategy_manager_resume_call, ark, PauseControlCall, ros2lcm
-ark_config_settings_call, ark, ArkConfigSettingsCall, ros2lcm
-ark_start_call, ark, Empty, ros2lcm
-ark_stop_call, ark, Empty, ros2lcm
+map_data_save_map_to_disk_call, ark, String, ros2lcm
 
 ### Service Responses ##
+map_data_clear_response, ark, Empty, lcm2ros
+control_selection_set_mode_response, ark, Empty, lcm2ros
+slam_set_mode_response, ark, Status, lcm2ros
+slam_set_initial_pose_response, ark, Bool, lcm2ros
 control_selection_autonomy_clear_all_disabled_response, ark, Empty, lcm2ros
 control_selection_autonomy_clear_all_paused_response, ark, Empty, lcm2ros
 control_selection_autonomy_disable_response, ark, Empty, lcm2ros
@@ -83,18 +87,7 @@ control_selection_core_enable_response, ark, Empty, lcm2ros
 control_selection_core_pause_response, ark, Empty, lcm2ros
 control_selection_core_resume_response, ark, Empty, lcm2ros
 control_selection_set_mode_response, ark, Empty, lcm2ros
-map_data_clear_response, ark, Empty, lcm2ros
 map_data_delete_map_response, ark, Empty, lcm2ros
-map_data_get_current_map_response, ark, GetCurrentMapResponse, lcm2ros
-map_data_get_map_info_response, ark, MapInfoResponse, lcm2ros
 map_data_list_maps_response, ark, StringArray, lcm2ros
-map_data_load_map_from_disk_response, ark, Empty, lcm2ros
+map_data_load_map_from_disk_response, ark, String, lcm2ros
 map_data_save_map_to_disk_response, ark, Empty, lcm2ros
-mode_manager_set_mode_response, ark, Status, lcm2ros
-slam_set_initial_pose_response, ark, Bool, lcm2ros
-strategy_manager_abort_path_response, ark, Empty, lcm2ros
-strategy_manager_pause_response, ark, PauseControlResponse, lcm2ros
-strategy_manager_resume_response, ark, PauseControlResponse, lcm2ros
-ark_config_settings_response, ark, ArkConfigSettingsResponse, lcm2ros
-ark_start_response, ark, Empty, lcm2ros
-ark_stop_response, ark, Empty, lcm2ros
