--- a/repub_configs/ark_server_republishers.cfg
+++ b/repub_configs/ark_server_republishers.cfg
@@ -1,38 +1,41 @@
-
-# REFERENCE:
-# topic_name, lcm_message_package (always ark), message_type, direction (lcm2ros or ros2lcm)
-
 ################ NECESSARY FOR ARK ####################
 tf, ark, tfMessage, lcm2ros
 tf_static, ark, tf2Message, lcm2ros
 platform_control_cmd_vel, ark, Twist, ros2lcm
 platform_control_odom, ark, Odometry, lcm2ros
 platform_odometry, ark, Odometry, lcm2ros
-stereo_camera_0, ark, PointCloud2, lcm2ros
 clock, ark, Clock, lcm2ros
+stereo_camera_0, ark, PointCloud2, lcm2ros
 
-################ ARK API ####################
-strategy_manager_path_complete, ark, Bool, ros2lcm
-strategy_manager_pause_status, ark, PauseStatus, ros2lcm
-strategy_manager_simple_goal, ark, PoseStamped, lcm2ros
-strategy_manager_simple_path, ark, Path, ros2lcm
-strategy_manager_distance_to_goal, ark, DistanceToGoal, ros2lcm
-slam_localization_score, ark, Float64, ros2lcm
-map_data_features_zones_exclusion, ark, GeometryArray, ros2lcm
+################ ARK SUBSCRIBED ####################
+cancel_goal, ark, Empty, lcm2ros
+send_goal, ark, String, lcm2ros
+
+################ ARK PUBLISHED ####################
+platform_control_cmd_vel, ark, Twist, ros2lcm
 map_data_features_markers_waypoint, ark, GeometryArray, ros2lcm
-map_data_saved_map_data, ark, CompressedMapData, ros2lcm
-map_data_map, ark, OccupancyGrid, ros2lcm
-map_data_md5sum, ark, String, ros2lcm
-map_data_loaded_map_filename, ark, String, ros2lcm
+map_data_features_zones_exclusion, ark, GeometryArray, ros2lcm
 control_selection_current_mode, ark, Mode, ros2lcm
-e_stop, ark, Bool, ros2lcm
-control_selection_control_state, ark, ControlSelectionState, ros2lcm
-path, ark, PoseArray, ros2lcm
-move_base_status, ark, GoalStatusArray, ros2lcm
+slam_current_mode, ark, Mode, ros2lcm
+slam_localization_status, ark, LocalizationStatus, ros2lcm
 slam_estimated_pose, ark, PoseWithCovarianceStamped, ros2lcm
-clock_echo, ark, Clock, ros2lcm
+path_2d, ark, Pose2DArray, ros2lcm
+path_planner_status, ark, GoalStatusArray, ros2lcm
+path_planner_feedback, ark, StepSequenceActionFeedback, ros2lcm
+path_planner_result, ark, StepSequenceActionResult, ros2lcm
+path_planner_current_job, ark, String, ros2lcm
+path_planner_distance_to_goal, ark, DistanceToGoal, ros2lcm
+robot_state_aggregator_state, ark, RobotState, ros2lcm
+map_data_loaded_map_filename, ark, String, ros2lcm
+map_data_md5sum, ark, String, ros2lcm
+control_selection_current_mode, ark, Mode, ros2lcm
+control_selection_autonomy_disable_sources, ark, StringArray, ros2lcm
+control_selection_autonomy_pause_sources, ark, StringArray, ros2lcm
+control_selection_control_state, ark, ControlSelectionState, ros2lcm
+control_selection_core_disable_sources, ark, StringArray, ros2lcm
+control_selection_core_pause_sources, ark, StringArray, ros2lcm
 
-################## FOR DIAGNOSTICS ###################
+###### FOR RECEIVING DIAGNOSTICS ON CLIENT ##########
 ark_diagnostics, ark, DiagnosticArray, ros2lcm
 
 #### LASERS ON ARK ####
@@ -44,6 +47,10 @@ front_scan, ark, LaserScan, lcm2ros
 #######################
 
 ### Service Calls ###
+map_data_clear_call, ark, Empty, lcm2ros
+control_selection_set_mode_call, ark, Mode, lcm2ros
+slam_set_mode_call, ark, Mode, lcm2ros
+slam_set_initial_pose_call, ark, PoseWithCovarianceStamped, lcm2ros
 control_selection_autonomy_clear_all_disabled_call, ark, Empty, lcm2ros
 control_selection_autonomy_clear_all_paused_call, ark, Empty, lcm2ros
 control_selection_autonomy_disable_call, ark, String, lcm2ros
@@ -57,23 +64,16 @@ control_selection_core_enable_call, ark, String, lcm2ros
 control_selection_core_pause_call, ark, String, lcm2ros
 control_selection_core_resume_call, ark, String, lcm2ros
 control_selection_set_mode_call, ark, Mode, lcm2ros
-map_data_clear_call, ark, Empty, lcm2ros
 map_data_delete_map_call, ark, String, lcm2ros
-map_data_get_current_map_call, ark, Empty, lcm2ros
-map_data_get_map_info_call, ark, String, lcm2ros
 map_data_list_maps_call, ark, Empty, lcm2ros
 map_data_load_map_from_disk_call, ark, String, lcm2ros
-map_data_save_map_to_disk_call, ark, SaveMapToDiskCall, lcm2ros
-mode_manager_set_mode_call, ark, Mode, lcm2ros
-slam_set_initial_pose_call, ark, PoseWithCovarianceStamped, lcm2ros
-strategy_manager_abort_path_call, ark, Empty, lcm2ros
-strategy_manager_pause_call, ark, PauseControlCall, lcm2ros
-strategy_manager_resume_call, ark, PauseControlCall, lcm2ros
-ark_config_settings_call, ark, ArkConfigSettingsCall, lcm2ros
-ark_start_call, ark, Empty, lcm2ros
-ark_stop_call, ark, Empty, lcm2ros
+map_data_save_map_to_disk_call, ark, String, lcm2ros
 
 ### Service Responses ##
+map_data_clear_response, ark, Empty, ros2lcm
+control_selection_set_mode_response, ark, Empty, ros2lcm
+slam_set_mode_response, ark, Status, ros2lcm
+slam_set_initial_pose_response, ark, Bool, ros2lcm
 control_selection_autonomy_clear_all_disabled_response, ark, Empty, ros2lcm
 control_selection_autonomy_clear_all_paused_response, ark, Empty, ros2lcm
 control_selection_autonomy_disable_response, ark, Empty, ros2lcm
@@ -87,18 +87,7 @@ control_selection_core_enable_response, ark, Empty, ros2lcm
 control_selection_core_pause_response, ark, Empty, ros2lcm
 control_selection_core_resume_response, ark, Empty, ros2lcm
 control_selection_set_mode_response, ark, Empty, ros2lcm
-map_data_clear_response, ark, Empty, ros2lcm
 map_data_delete_map_response, ark, Empty, ros2lcm
-map_data_get_current_map_response, ark, GetCurrentMapResponse, ros2lcm
-map_data_get_map_info_response, ark, MapInfoResponse, ros2lcm
 map_data_list_maps_response, ark, StringArray, ros2lcm
-map_data_load_map_from_disk_response, ark, Empty, ros2lcm
+map_data_load_map_from_disk_response, ark, String, ros2lcm
 map_data_save_map_to_disk_response, ark, Empty, ros2lcm
-mode_manager_set_mode_response, ark, Status, ros2lcm
-slam_set_initial_pose_response, ark, Bool, ros2lcm
-strategy_manager_abort_path_response, ark, Empty, ros2lcm
-strategy_manager_pause_response, ark, PauseControlResponse, ros2lcm
-strategy_manager_resume_response, ark, PauseControlResponse, ros2lcm
-ark_config_settings_response, ark, ArkConfigSettingsResponse, ros2lcm
-ark_start_response, ark, Empty, ros2lcm
-ark_stop_response, ark, Empty, ros2lcm
